--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ form {
 }
 .green {
     border-radius: 5px;
-    background-color: green;
+    background-color: lime;
     display: inline;
     padding: 2px;
 }
